--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -7,11 +7,12 @@
   justify-content: center;
   gap: 2rem;
   padding: 1rem 3rem;
-  background: rgba(246,239,231, 0.75);
+  background: rgba(255, 255, 255, 0.08);
   backdrop-filter: blur(12px);
   -webkit-backdrop-filter: blur(12px);
   box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s ease;
+  transform: translateX(-50%);
 }
 
 .brand {
@@ -25,7 +26,7 @@
 }
 
 .brandDot {
-  color: #000;
+  color: #fff;
 }
 
 .navbarList {
@@ -40,8 +41,8 @@
   position: relative;
   font-size: 1rem;
   text-decoration: none;
-  font-weight: 500;
-  color: #111;
+  font-weight: 600;
+  color: #fff;
   opacity: 0.8;
   transition: opacity 0.3s ease;
 }
@@ -56,5 +57,5 @@
   bottom: -6px;
   height: 2px;
   width: 100%;
-  background-color: #111;
+  background-color: #fff;
 }
